# provwasm-examples

./: README.md
_old/: README
_old/example-settlement/: Makefile
_old/example-settlement/examples/: schema.rs
_old/example-settlement/src/: lib.rs  state.rs
bank-settlement/: Cargo.toml  Makefile  README.md
bank-settlement/artifacts/: bank_settlement.wasm  checksums.txt
bank-settlement/examples/: schema.rs
bank-settlement/schema/: handle_msg.json  init_msg.json
bank-settlement/src/: contract.rs  msg.rs  state.rs
bank-settlement/testdata/: marker.json
example-settlement/: Cargo.toml  README.md
example-settlement/src/: contract.rs  msg.rs
exchange-settlement/: Cargo.toml
exchange-settlement/examples/: schema.rs
exchange-settlement/src/: contract.rs  msg.rs  state.rs
hft-demo/: Cargo.toml  Makefile  README.md
hft-demo/artifacts/: checksums.txt  hft.wasm
hft-demo/examples/: schema.rs
hft-demo/schema/: execute_msg.json  init_msg.json  query_msg.json  state.json  trader_state.json
hft-demo/src/: contract.rs  error.rs  msg.rs  state.rs
hft-demo/testdata/: security.json  stablecoin.json
marker-settlement/: Cargo.toml  Makefile  README.md
marker-settlement/artifacts/: checksums.txt  marker_settlement.wasm
marker-settlement/examples/: schema.rs
marker-settlement/schema/: handle_msg.json  init_msg.json  state.json
marker-settlement/src/: contract.rs  msg.rs  state.rs
marker-settlement/testdata/: marker.json
orderbook/: .gitignore  Cargo.toml  Makefile  README.md
orderbook/artifacts/: checksums.txt  orderbook.wasm
orderbook/examples/: schema.rs
orderbook/schema/: ask_order.json  bid_order.json  buy_order.json  execute_msg.json  init_msg.json  query_msg.json  sell_order.json  state.json
orderbook/src/: contract.rs  error.rs  msg.rs  state.rs
tutorial/: Cargo.toml  Makefile  README.md
tutorial-migrate/: Cargo.toml
tutorial-migrate/artifacts/: checksums.txt  tutorial.wasm
tutorial-migrate/schema/: migrate_msg.json
tutorial-migrate/src/: contract.rs
tutorial/artifacts/: checksums.txt  tutorial.wasm
tutorial/examples/: schema.rs
tutorial/schema/: handle_msg.json  init_msg.json  query_msg.json  state.json
tutorial/src/: contract.rs  msg.rs  state.rs
