[package]
name = "orderbook"
version = "0.1.0"
authors = ["David Pederson <dpederson@figure.com>"]
edition = "2018"

exclude = [
  "orderbook.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
provwasm-std = { version = "0.14.0" }
cosmwasm-std = { version = "0.14.0", features = ["iterator"] }
cosmwasm-storage = { version = "0.14.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
provwasm-mocks = { version = "0.14.0" }
cosmwasm-schema = { version = "0.14.0" }
