[package]
name = "tutorial"
version = "0.5.0"
authors = ["David Pederson <dpederson@figure.com>"]
edition = "2018"

exclude = [
  "tutorial.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = []

[dependencies]
provwasm-std = { git = "https://github.com/provenance-io/provwasm", branch = "wip/v0.14.0-beta2",  version = "0.14.0-beta2"}
cosmwasm-std = { version = "0.14.0-beta2" }
cosmwasm-storage = { version = "0.14.0-beta2" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
provwasm-mocks = { git = "https://github.com/provenance-io/provwasm", branch = "wip/v0.14.0-beta2", version = "0.14.0-beta2" }
cosmwasm-schema = { version = "0.14.0-beta2" }
