[package]
name = "tutorial"
version = "0.5.0"
authors = ["David Pederson <dpederson@figure.com>"]
edition = "2018"

exclude = [
  "tutorial.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = []

[dependencies]
provwasm-std = { git = "https://github.com/provenance-io/provwasm", branch = "wip/v0.14.0-beta3",  version = "0.14.0-beta3"}
cosmwasm-std = { version = "0.14.0-beta3" }
cosmwasm-storage = { version = "0.14.0-beta3" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
provwasm-mocks = { git = "https://github.com/provenance-io/provwasm", branch = "wip/v0.14.0-beta3", version = "0.14.0-beta3" }
cosmwasm-schema = { version = "0.14.0-beta3" }
