[package]
name = "tutorial"
version = "0.6.0"
authors = ["David Pederson <dpederson@figure.com>"]
edition = "2018"

exclude = [
  "tutorial.wasm",
  "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = []

[dependencies]
provwasm-std = { version = "0.14.2"}
cosmwasm-std = { version = "0.14.1" }
cosmwasm-storage = { version = "0.14.1" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
provwasm-mocks = { version = "0.14.2" }
cosmwasm-schema = { version = "0.14.1" }
